# audiograph

./: Makefile.in  README  aclocal.m4  audiograph.c  audiograph.h  configure  configure.in  graph.c  wav.c
